--- a/views/home.html
+++ b/views/home.html
@@ -106,7 +106,7 @@
     <img src = "/images/img-home-banner.jpg" alt= ""
 
 
-    style="width: 426px;
+    style="width: 358px;
        padding-bottom: 1%;
        padding-top: 20%;
     height: 70px;">
@@ -117,37 +117,6 @@
 </header>
 
 <main>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-    
-
-
-
-
-
-
-    
-<div class= "estructura-main">
 
 
 
@@ -162,15 +131,16 @@
             
 
     <center>
-        
-        <img src = "/images/img-cafetera-moulinex.jpg" alt= ""
+        <div class="caja"  >
+           <div class="palabra"><h3>Ofertas</h3></div>
+            <img src = "/images/img-cafetera-moulinex.jpg" alt= ""
         style="width: 250px;
-       
+     
         height: 250px;
-          margin-bottom: 10px;" >
+          margin-top: 35px;" >
 
      </center>
-
+     <div class="caja2">
 <div class= "estructura"></div>
 
      <div class= "circulo"> <div class= "camión">
@@ -182,23 +152,26 @@
            
         <p>$6.770</p></div>
             <p>40% OFF</p>
-            <h4>Cafetera Moulinex</h4>
-                
-     
+        <div class= "descripcion">
+            <h4>Cafetera Moulinex</h4></div>
+        </div>
+    </div>
 </article>
 
-
+</div>
 
 <article>
                 <center>
-
+                    <div class="caja"  >
+                        <div class="palabra"><h3>Ofertas</h3></div>
                 <img src = "/images/img-macbook-pro-2019.jpg" alt= ""
                 style="width: 250px;
        
                 height: 250px;
-                margin-bottom: 10px;">
+                margin-top: 35px;">
 
             </center>
+            <div class="caja2">
             <div class= "estructura"></div>
             <div class= "circulo"> <div class= "camión">
                 <i class="fas fa-truck"></i>
@@ -207,19 +180,24 @@
                    
                 <p>$230.000</p> </div>
                     <p>20% OFF</p>
+                    <div class= "descripcion">
                     <h4>MacBook Pro 2019</h4>
+                </div>
                 
 </article>
 
 <article>
     <center>
+        <div class="caja"  >
+            <div class="palabra"><h3>Ofertas</h3></div>
                         <img src = "/images/img-samsung-galaxy-s10.jpg" alt= ""
 
                         style="width: 250px;
        
                         height: 250px; 
-                        margin-bottom: 10px;">
+                        margin-top: 35px;">
     </center>
+    <div class="caja2">
     <div class= "estructura"></div>
     <div class= "circulo"> <div class= "camión">
         <i class="fas fa-truck"></i>
@@ -228,18 +206,23 @@
                          
                         <p>$70.500</p> </div>
                             <p>10% OFF</p>
+                            <div class= "descripcion">
                                <h4>Samsung Galaxy S10</h4>
+                            </div>
                        
  </article>
 <article>
                                 <center>
+                                    <div class="caja"  >
+                                        <div class="palabra"><h3>Ofertas</h3></div>
                                 <img src = "/images/img-tv-samsung-smart.jpg" alt= ""
                                 style="width: 250px;
        
                                 height: 250px;
-                                margin-bottom: 10px;">
+                                margin-top: 35px;">
 
                             </center>
+                            <div class="caja2">
                             <div class= "estructura"></div>
                             <div class= "circulo"> <div class= "camión">
                                 <i class="fas fa-truck"></i>
@@ -248,7 +231,9 @@
                                    
                                 <p>$23.200</p> </div>
                                     <p>5% OFF</p>
-                                    <h4>SmartTv Samsung 43"</h4>           
+                                    <div class= "descripcion">
+                                    <h4>SmartTv Samsung 43"</h4> 
+                                </div>          
                                 </div>
 
      </article>
@@ -271,16 +256,19 @@
 
 
         <center>
+
+            <div class="caja"  >
+                <div class="palabra"><h3>Ofertas</h3></div>
         <img src = "/images/img-cafetera-moulinex.jpg" alt= ""
     
 
         style="width: 250px;
        
         height: 250px;
-margin-bottom: 10px;">
+        margin-top: 35px;">
 
         </center>
-
+        <div class="caja2">
         <div class= "estructura"></div>
 
         <div class= "circulo"> <div class= "camión">
@@ -292,41 +280,53 @@ margin-bottom: 10px;">
       
         <p>$6.770</p> </div>
             <p>40% OFF</p>
+            <div class= "descripcion">
             <h4>Cafetera Moulinex/<h4>
+            </div>
 </article>
 
 
 <article>
             <center>
+                <div class="caja"  >
+                    <div class="palabra"><h3>Ofertas</h3></div>
                 <img src = "/images/img-macbook-pro-2019.jpg" alt= ""
                 style="width: 250px;
        
                 height: 250px;
-                margin-bottom: 10px;">
+                margin-top: 35px;">
 
             </center>
+            <div class="caja2">
             <div class= "estructura"></div>
             <div class= "circulo"> <div class= "camión">
                 <i class="fas fa-truck"></i>
             </div></div>
+
                 <div class="precio">
                   
                 <p>$230.000</p> </div>
                     <p>20% OFF</p>
+                    <div class= "descripcion">
                     <h4>MacBook Pro 2019</h4>
+                </div>
 
                     </article>
-                <article>
+                
+    <article>
                         
             <center>
+                <div class="caja"  >
+                    <div class="palabra"><h3>Ofertas</h3></div>
                         <img src = "/images/img-samsung-galaxy-s10.jpg" alt= ""
 
                         style="width: 250px;
        
                         height: 250px;
-                        margin-bottom: 10px;">
+                        margin-top: 35px;">
                         
             </center>
+            <div class="caja2">
             <div class= "estructura"></div>
 
             <div class= "circulo"> <div class= "camión">
@@ -336,33 +336,38 @@ margin-bottom: 10px;">
                       
                         <p>$70.500</p> </div>
                             <p>10% OFF</p>
+                            <div class= "descripcion">
                             <h4>Samsung Galaxy S10</h4>
-
-
+                        </div>
+                        </article>
 <article>
 
 
                             <center>
-
+                                <div class="caja"  >
+                                    <div class="palabra"><h3>Ofertas</h3></div>
 
                                 <img src = "/images/img-tv-samsung-smart.jpg" alt= ""
                                 style="width: 250px;
        
                                 height: 250px;
-                                margin-bottom: 10px;">
+                                margin-top: 35px;">
 
                             </center>
+                            <div class="caja2">
                             <div class= "estructura"></div>
 
                             <div class= "circulo"> <div class= "camión">
                                 <i class="fas fa-truck"></i>
                             </div></div>
+
                                 <div class="precio">
                                    
                                 <p>$23.200</p> </div>
                                     <p>5% OFF</p>
+                                    <div class= "descripcion">
                                     <h4>SmartTv Samsung 43"</h4>            
-
+                                </div>
 
 
     </article>
@@ -374,40 +379,11 @@ margin-bottom: 10px;">
 
 
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 <footer>
 
 
     <section>
-
+<br>
 
         <article>
         <div class="tarjeta">
@@ -415,9 +391,9 @@ margin-bottom: 10px;">
 </div>
 
 <div class="crédito">
-<H3>Pagá con tarjeta de crédito o en efectivo</H3>
-<P>Con Mercado Liebre Cash, tenés cuotas sin</P> interés con tarjeta o efectivo en
-    puntos de<P><P> pago. ¡Y siempre es seguro!</P>
+<h3>Pagá con tarjeta de crédito o en efectivo</h3>
+<P>Con Mercado Liebre Cash, tenés cuotas sin</P> <p>interés con tarjeta o efectivo en
+    puntos de</p><P> pago. ¡Y siempre es seguro!</P>
     </div>
 
 
