--- a/views/home.html
+++ b/views/home.html
@@ -33,7 +33,7 @@
         
             style="width: 228px"
             
-            padding-bottom: 50%>
+            padding-bottom: 50%>                  
         
         </div>
     <div class="lupa">
@@ -50,10 +50,10 @@
     <div class="cuotas">
      <a href=""><span class="fas fa-hand-holding-usd"></span> </a>   Comprá en cuotas y sin tarjeta de crédito
     </div>
-
+    <div class="items">
 
 <nav>
-
+           
 <ul>
         <li><a href="">Ofertas</a></li>
         <li><a href="">Tiendas oficiales</a></li>
@@ -91,16 +91,19 @@
 
             <a href=""><i class="fas fa-shopping-basket"></i></a>    
 
-
+        </div>
     </li>
 </ul>
 
+
+</nav>
+<br>
     <div class="burger-menu">
      
         <i class="fas fa-bars"></i>
        </div>
 
-    </nav>
+    
   
 
     <img src = "/images/img-home-banner.jpg" alt= ""
@@ -121,8 +124,8 @@
 
 
 <section>
-
-        <h3>BASADO EN TU ÚLTIMA VISITA</h3>
+   
+        
 
 
 
@@ -132,7 +135,8 @@
 
     <center>
         <div class="caja"  >
-           <div class="palabra"><h3>Ofertas</h3></div>
+            
+           <div class="palabra"><h3>BASADO EN TU ÚLTIMA VISITA</h3>  <h3>Ofertas</h3></div>
             <img src = "/images/img-cafetera-moulinex.jpg" alt= ""
         style="width: 250px;
      
