--- a/views/home.html
+++ b/views/home.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+ 
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -11,6 +12,15 @@
 
 </head>
 <body>
+
+    
+
+
+   
+   
+
+
+
 
   <header>
     <div class="logo">
@@ -104,12 +114,12 @@
        </div>
 
     
-  
+ 
 
     <img src = "/images/img-home-banner.jpg" alt= ""
 
 
-    style="width: 358px;
+    style="width: 100%;
        padding-bottom: 1%;
        padding-top: 20%;
     height: 70px;">
@@ -136,7 +146,7 @@
     <center>
         <div class="caja"  >
             
-           <div class="palabra"><h3>BASADO EN TU ÚLTIMA VISITA</h3>  <h3>Ofertas</h3></div>
+           <div class="palabra"><h4>Basado en tu última visita</h4>  <h3>Ofertas</h3></div>
             <img src = "/images/img-cafetera-moulinex.jpg" alt= ""
         style="width: 250px;
      
@@ -248,21 +258,15 @@
 
     <section>
 
+    <article>
 
-        <div class= "estructura-main">
-        <H3>SECCIÓN DE OFERTAS</H3>
-
-
-
-<article>
-
+<center>
+        <div class="caja"  >
+            
+            <div class="palabra"><h3>Sección de ofertas</h3>  <h3>Ofertas</h3></div>
 
 
 
-        <center>
-
-            <div class="caja"  >
-                <div class="palabra"><h3>Ofertas</h3></div>
         <img src = "/images/img-cafetera-moulinex.jpg" alt= ""
     
 
@@ -395,7 +399,7 @@
 </div>
 
 <div class="crédito">
-<h3>Pagá con tarjeta de crédito o en efectivo</h3>
+<h4>Pagá con tarjeta de crédito o en efectivo</h4>
 <P>Con Mercado Liebre Cash, tenés cuotas sin</P> <p>interés con tarjeta o efectivo en
     puntos de</p><P> pago. ¡Y siempre es seguro!</P>
     </div>
@@ -444,5 +448,10 @@
 </section>
 </footer>
 
+
+
+
+
 </body>
+
 </html>
